[workspace]

[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6"
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

rsp-client-executor = { git = "https://github.com/colorfulnotion/rsp", package = "rsp-client-executor" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4", default-features = false }
anyhow = "1.0"
