[package]
name = "executor"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
rsp-client-executor = { git = "https://github.com/colorfulnotion/rsp", package = "rsp-client-executor" }
alloy-primitives = { version = "0.8.20", default-features = false, features = ["sha3-keccak", "map-foldhash"] }
